# ataraxia

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codebook.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
doc/adr/: 0001-record-architecture-decisions.md  0002-strategy-and-features-as-pure-functions.md  0003-feature-composition.md  0004-compute-graph.md  0005-save-every-computation-step-for-debugging.md  0006-massive-parallelism-via-sharding.md  0007-idempotency-and-immutability-of-backtester-runs.md  0008-stateful-callable-class-instead-of-a-generator.md  0009-dict-instead-of-tuple-for-dependency-injection-unpacking.md  0010-provider-for-graph-source-instead-of-bare-type.md  0011-multi-source-single-sink-dag.md  0012-source-node-computable-instance.md  0013-broker-position-entry-needs-delay.md
sample/: nq_15m_2026_07_19.csv  nq_15m_2026_07_20.csv
script/: commitizen_pre_bump_hook.sh
src/ataraxia/: __init__.py  backtest.py  bar.py  broker.py  cli.py  compute.py  compute_old.py  di.py  errors.py  feature.py  features.py  foo.py  provider.py  source.py  util.py
src/ataraxia/compute/: __init__.py  graph.py  loop.py  protocol.py  protocols.py
test/integration/: test_backtest.py  test_util.py
test/unit/: test_backtest.py  test_bar.py  test_broker.py  test_cli.py  test_compute.py  test_di.py  test_feature.py  test_features.py  test_foo.py  test_provider.py  test_source.py  test_util.py
test/unit/compute/: test_graph.py  test_loop.py
